# motion

./: CMakeLists.txt  README  conf.c  config.h  event.c  motion.c  motion.h  omx.c  omx.h
configs/: motion-mmalcam-omx.conf  motion-mmalcam.conf
